--- a/convert.ipynb
+++ b/convert.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,28 +36,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "genome_file = \"cazy_genomes_2021_05_15.json\"\n",
-    "#genome_file = \"test.json\"\n",
+    "### Generate the genome CSV\n",
     "\n",
-    "desired_rank = [\"superkingdom\", \"phylum\", \"class\", \"order\", \"family\", \"genus\", \"species\", \"genome\"]\n",
+    "genome_file = \"raw_data/cazy_genomes_2021_05_15.json\"\n",
+    "\n",
+    "cellulose_degrader_file = \"raw_data/cellulose_info.tsv\"\n",
+    "\n",
+    "is_header = True\n",
+    "\n",
+    "genome_degrader = {}\n",
+    "\n",
+    "for line in open(cellulose_degrader_file, 'r'):\n",
+    "    if is_header == True:\n",
+    "        is_header = False\n",
+    "    else:\n",
+    "        fields = line.strip().split(\"\\t\")\n",
+    "\n",
+    "        genome_degrader[fields[0]] = fields[1]\n",
+    "\n",
+    "desired_rank = [\"superkingdom\", \"phylum\", \"class\", \"order\", \"family\", \"genus\", \"species\"]\n",
     "\n",
     "taxon_dict = {}\n",
     "\n",
     "parent_son = set()\n",
+    "taxon_genome = set()\n",
     "\n",
-    "with open(\"taxon.csv\", \"w\") as output:\n",
+    "with open(\"data_for_neo4j/taxon.csv\", \"w\") as output:\n",
     "    output.write(\",\".join([\"name\", \"taxid\", \"rank\"]) + \"\\n\")\n",
     "\n",
-    "with open(\"connections.csv\", \"w\") as output:\n",
+    "with open(\"data_for_neo4j/genome.csv\", \"w\") as output:\n",
+    "    output.write(\",\".join([\"name\", \"cellulose\"]) + \"\\n\")\n",
+    "\n",
+    "with open(\"data_for_neo4j/taxon_connections.csv\", \"w\") as output:\n",
     "    output.write(\",\".join([\"from\", \"to\"]) + \"\\n\")\n",
     "\n",
-    "with open(\"has_cazy.csv\", \"w\") as output:\n",
+    "with open(\"data_for_neo4j/genome_connections.csv\", \"w\") as output:\n",
+    "    output.write(\",\".join([\"from\", \"to\"]) + \"\\n\")\n",
+    "\n",
+    "with open(\"data_for_neo4j/has_cazy.csv\", \"w\") as output:\n",
     "    output.write(\",\".join([\"from\", \"to\", \"amount\"]) + \"\\n\")\n",
     "\n",
     "for line in open(genome_file, 'r'):\n",
@@ -69,7 +91,7 @@
     "\n",
     "        taxonomy = genome[\"taxonomy\"]\n",
     "\n",
-    "        taxonomy[\"genome\"] = [name, genome[\"taxid\"]]\n",
+    "        #taxonomy[\"genome\"] = [name, genome[\"taxid\"]]\n",
     "\n",
     "        quartett = [\"\"] * 2\n",
     "        for rank in desired_rank:\n",
@@ -84,30 +106,47 @@
     "                else:\n",
     "                    quartett[1] = taxon\n",
     "\n",
-    "                    if quartett[0] != quartett[1]:\n",
-    "                        parent_son.add(tuple(quartett))\n",
+    "                    #if quartett[0] != quartett[1]:\n",
+    "                    \n",
+    "                    parent_son.add(tuple(quartett))\n",
     "\n",
-    "                        quartett[0] = quartett[1]\n",
+    "                    quartett[0] = quartett[1]\n",
     "        \n",
     "        taxon_dict[name] = [taxid, \"genome\"]\n",
+    "        taxon_genome.add(tuple([quartett[0], name]))\n",
     "\n",
     "        for cazy in genome[\"cazy\"]:\n",
-    "            with open(\"has_cazy.csv\", \"a\") as output:\n",
-    "            #[\"~id\", \"~from\", \"~to\", \"~label\"]\n",
+    "            with open(\"data_for_neo4j/has_cazy.csv\", \"a\") as output:            \n",
     "                output.write(\",\".join([f'\"{name}\"', f'\"{cazy}\"', f'{genome[\"cazy\"][cazy]}']) + \"\\n\")\n",
     "\n",
     "\n",
-    "        #print (genome)\n",
-    "#print (taxon_dict)\n",
     "\n",
     "\n",
     "for name in taxon_dict:\n",
-    "    with open(\"taxon.csv\", \"a\") as output:\n",
-    "        output.write(\",\".join([f'\"{name}\"', f'\"{taxon_dict[name][0]}\"', f'\"{taxon_dict[name][1]}\"']) + \"\\n\")\n",
+    "    with open(\"data_for_neo4j/taxon.csv\", \"a\") as output:\n",
+    "        if taxon_dict[name][1] != \"genome\":\n",
+    "            output.write(\",\".join([f'\"{name}\"', f'\"{taxon_dict[name][0]}\"', f'\"{taxon_dict[name][1]}\"']) + \"\\n\")\n",
+    "\n",
+    "for name in taxon_dict:\n",
+    "    with open(\"data_for_neo4j/genome.csv\", \"a\") as output:\n",
+    "        if taxon_dict[name][1] == \"genome\":\n",
+    "            cellulose = \"\"\n",
+    "\n",
+    "            if name in genome_degrader:\n",
+    "                if genome_degrader[name] == \"no cellulose degrader\":\n",
+    "                    output.write(\",\".join([f'\"{name}\"', '0']) + \"\\n\")\n",
+    "                else:\n",
+    "                    output.write(\",\".join([f'\"{name}\"', '1']) + \"\\n\")\n",
+    "            else:\n",
+    "                output.write(\",\".join([f'\"{name}\"', '2']) + \"\\n\")\n",
     "\n",
     "for parent in parent_son:\n",
-    "    with open(\"connections.csv\", \"a\") as output:\n",
+    "    with open(\"data_for_neo4j/taxon_connections.csv\", \"a\") as output:\n",
     "        #[\"~id\", \"~from\", \"~to\", \"~label\"]\n",
+    "        output.write(\",\".join([f'\"{parent[0]}\"', f'\"{parent[1]}\"']) + \"\\n\")\n",
+    "\n",
+    "for parent in taxon_genome:\n",
+    "    with open(\"data_for_neo4j/genome_connections.csv\", \"a\") as output:\n",
     "        output.write(\",\".join([f'\"{parent[0]}\"', f'\"{parent[1]}\"']) + \"\\n\")"
    ]
   },
@@ -117,6 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## generate the cazy CSVs\n",
+    "\n",
     "info_file = \"cazy_info_2021_05_12.json\"\n",
     "\n",
     "rx_ec = re.compile(r'\\b\\d+\\.\\d+\\.\\d+\\.\\d+\\b')\n",
@@ -183,6 +224,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### generate the EC CSVs\n",
+    "\n",
     "with open(\"ec_final.csv\", \"w\") as output:\n",
     "    output.write(\",\".join([\"name\", \"sysname\", \"reaction\"]) + \"\\n\")\n",
     "\n",
@@ -207,6 +250,39 @@
     "        #print (f'{line.strip()},\"{sysname}\",\"{reaction}\"')\n",
     "        with open(\"ec_final.csv\", \"a\") as output:\n",
     "            output.write(\",\".join([line.strip(), f'\"{sysname}\"', f'\"{reaction}\"']) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'data': {'taxons': [{'name': 'Formosa', 'rank': 'genus', 'taxid': '225842', 'genomes': [{'name': 'Formosa sediminum PS13', 'cazys': [{'name': 'CE14', 'amount': 1}, {'name': 'GH0', 'amount': 1}, {'name': 'GH3', 'amount': 6}, {'name': 'GT30', 'amount': 1}, {'name': 'GH31', 'amount': 3}, {'name': 'GT5', 'amount': 2}, {'name': 'GH107', 'amount': 1}, {'name': 'GH1', 'amount': 1}, {'name': 'CBM47', 'amount': 1}, {'name': 'PL26', 'amount': 1}, {'name': 'GT51', 'amount': 3}, {'name': 'GT0', 'amount': 2}, {'name': 'GT20', 'amount': 1}, {'name': 'CBM50', 'amount': 7}, {'name': 'CBM6', 'amount': 9}, {'name': 'GT28', 'amount': 1}, {'name': 'PL6', 'amount': 3}, {'name': 'CE11', 'amount': 1}, {'name': 'GH92', 'amount': 1}, {'name': 'GH171', 'amount': 3}, {'name': 'GH43', 'amount': 2}, {'name': 'CE9', 'amount': 1}, {'name': 'GH5', 'amount': 2}, {'name': 'GH25', 'amount': 1}, {'name': 'PL29', 'amount': 1}, {'name': 'PL33', 'amount': 1}, {'name': 'GT19', 'amount': 1}, {'name': 'GH97', 'amount': 1}, {'name': 'CBM88', 'amount': 1}, {'name': 'GH16', 'amount': 1}, {'name': 'GT2', 'amount': 33}, {'name': 'GH20', 'amount': 3}, {'name': 'CE4', 'amount': 1}, {'name': 'GH113', 'amount': 1}, {'name': 'PL7', 'amount': 3}, {'name': 'CBM48', 'amount': 3}, {'name': 'GH130', 'amount': 2}, {'name': 'GH117', 'amount': 1}, {'name': 'GH30', 'amount': 4}, {'name': 'PL38', 'amount': 1}, {'name': 'GH95', 'amount': 2}, {'name': 'PL8', 'amount': 1}, {'name': 'GH73', 'amount': 1}, {'name': 'GH29', 'amount': 2}, {'name': 'PL12', 'amount': 1}, {'name': 'PL17', 'amount': 1}, {'name': 'PL40', 'amount': 1}, {'name': 'CBM35', 'amount': 1}, {'name': 'GH144', 'amount': 1}, {'name': 'GH88', 'amount': 2}, {'name': 'GH23', 'amount': 2}, {'name': 'GH15', 'amount': 1}, {'name': 'CBM32', 'amount': 1}, {'name': 'PL1', 'amount': 1}, {'name': 'GT9', 'amount': 2}, {'name': 'GT4', 'amount': 20}, {'name': 'GH39', 'amount': 2}, {'name': 'GH13', 'amount': 6}, {'name': 'GH65', 'amount': 2}, {'name': 'GH109', 'amount': 1}]}, {'name': 'Formosa agariphila KMM 3901', 'cazys': [{'name': 'GT19', 'amount': 1}, {'name': 'GH115', 'amount': 1}, {'name': 'GH95', 'amount': 1}, {'name': 'GT20', 'amount': 1}, {'name': 'GH109', 'amount': 1}, {'name': 'GH113', 'amount': 1}, {'name': 'GH2', 'amount': 14}, {'name': 'GH117', 'amount': 6}, {'name': 'GH168', 'amount': 2}, {'name': 'GH23', 'amount': 2}, {'name': 'GH29', 'amount': 5}, {'name': 'GH149', 'amount': 1}, {'name': 'GH5', 'amount': 3}, {'name': 'PL17', 'amount': 1}, {'name': 'GH28', 'amount': 2}, {'name': 'GH20', 'amount': 1}, {'name': 'PL7', 'amount': 5}, {'name': 'GH39', 'amount': 3}, {'name': 'PL28', 'amount': 1}, {'name': 'PL37', 'amount': 1}, {'name': 'CE14', 'amount': 1}, {'name': 'GH15', 'amount': 1}, {'name': 'GH1', 'amount': 1}, {'name': 'PL12', 'amount': 1}, {'name': 'GH25', 'amount': 1}, {'name': 'GH43', 'amount': 2}, {'name': 'PL0', 'amount': 2}, {'name': 'GH73', 'amount': 1}, {'name': 'GH88', 'amount': 5}, {'name': 'GH31', 'amount': 3}, {'name': 'GH0', 'amount': 2}, {'name': 'GH130', 'amount': 2}, {'name': 'GT28', 'amount': 1}, {'name': 'GT0', 'amount': 4}, {'name': 'GH86', 'amount': 2}, {'name': 'PL40', 'amount': 3}, {'name': 'GH17', 'amount': 2}, {'name': 'GH106', 'amount': 1}, {'name': 'GH78', 'amount': 3}, {'name': 'GH16', 'amount': 9}, {'name': 'GH65', 'amount': 1}, {'name': 'GT2', 'amount': 33}, {'name': 'GT30', 'amount': 1}, {'name': 'PL8', 'amount': 1}, {'name': 'GH158', 'amount': 1}, {'name': 'PL33', 'amount': 1}, {'name': 'GT51', 'amount': 3}, {'name': 'CBM48', 'amount': 2}, {'name': 'GH3', 'amount': 7}, {'name': 'GT4', 'amount': 20}, {'name': 'CE4', 'amount': 1}, {'name': 'GH97', 'amount': 1}, {'name': 'GH171', 'amount': 4}, {'name': 'GT5', 'amount': 2}, {'name': 'GH105', 'amount': 1}, {'name': 'CBM6', 'amount': 1}, {'name': 'GH13', 'amount': 5}, {'name': 'CE11', 'amount': 1}, {'name': 'PL6', 'amount': 4}, {'name': 'GT9', 'amount': 2}, {'name': 'GH30', 'amount': 2}, {'name': 'CBM32', 'amount': 4}, {'name': 'CBM50', 'amount': 4}, {'name': 'GH26', 'amount': 3}]}, {'name': 'Formosa sp. Hel1_31_208', 'cazys': [{'name': 'GT4', 'amount': 14}, {'name': 'GH171', 'amount': 1}, {'name': 'GH92', 'amount': 1}, {'name': 'GT2', 'amount': 25}, {'name': 'GH73', 'amount': 1}, {'name': 'GT19', 'amount': 1}, {'name': 'GT30', 'amount': 1}, {'name': 'CE4', 'amount': 1}, {'name': 'GT5', 'amount': 1}, {'name': 'GH2', 'amount': 1}, {'name': 'GH3', 'amount': 1}, {'name': 'CBM4', 'amount': 1}, {'name': 'GH20', 'amount': 1}, {'name': 'GT28', 'amount': 1}, {'name': 'GH26', 'amount': 1}, {'name': 'GT51', 'amount': 4}, {'name': 'GT9', 'amount': 2}, {'name': 'CE14', 'amount': 1}, {'name': 'GT20', 'amount': 1}, {'name': 'GH15', 'amount': 1}, {'name': 'GH23', 'amount': 2}, {'name': 'CBM50', 'amount': 12}, {'name': 'GH16', 'amount': 2}, {'name': 'GH30', 'amount': 1}, {'name': 'CBM9', 'amount': 1}, {'name': 'GH149', 'amount': 1}, {'name': 'CE11', 'amount': 1}, {'name': 'GH17', 'amount': 2}, {'name': 'GH113', 'amount': 1}]}, {'name': 'Formosa sp. Hel1_33_131', 'cazys': [{'name': 'GH149', 'amount': 1}, {'name': 'GT4', 'amount': 11}, {'name': 'GH92', 'amount': 4}, {'name': 'GH30', 'amount': 1}, {'name': 'GT28', 'amount': 1}, {'name': 'GH113', 'amount': 2}, {'name': 'CBM50', 'amount': 7}, {'name': 'GH18', 'amount': 3}, {'name': 'GH16', 'amount': 3}, {'name': 'GH73', 'amount': 1}, {'name': 'GT51', 'amount': 2}, {'name': 'GT5', 'amount': 1}, {'name': 'GT2', 'amount': 19}, {'name': 'CE11', 'amount': 1}, {'name': 'CE14', 'amount': 1}, {'name': 'GT30', 'amount': 1}, {'name': 'GH171', 'amount': 1}, {'name': 'GT0', 'amount': 1}, {'name': 'GH5', 'amount': 1}, {'name': 'GT9', 'amount': 2}, {'name': 'GH17', 'amount': 3}, {'name': 'GT19', 'amount': 1}, {'name': 'GH23', 'amount': 2}, {'name': 'GH3', 'amount': 2}]}, {'name': 'Formosa sp. Hel3_A1_48', 'cazys': [{'name': 'GH16', 'amount': 3}, {'name': 'CE3', 'amount': 1}, {'name': 'GT9', 'amount': 1}, {'name': 'GT5', 'amount': 1}, {'name': 'GH17', 'amount': 3}, {'name': 'GH128', 'amount': 1}, {'name': 'CBM50', 'amount': 7}, {'name': 'GH171', 'amount': 1}, {'name': 'GH136', 'amount': 2}, {'name': 'CBM6', 'amount': 2}, {'name': 'GH3', 'amount': 3}, {'name': 'PL0', 'amount': 1}, {'name': 'CE1', 'amount': 1}, {'name': 'GH73', 'amount': 1}, {'name': 'CE11', 'amount': 1}, {'name': 'GH0', 'amount': 1}, {'name': 'CBM22', 'amount': 1}, {'name': 'CE14', 'amount': 1}, {'name': 'GH50', 'amount': 1}, {'name': 'GT51', 'amount': 1}, {'name': 'GH43', 'amount': 1}, {'name': 'GT28', 'amount': 1}, {'name': 'GH2', 'amount': 2}, {'name': 'GH5', 'amount': 2}, {'name': 'GH30', 'amount': 5}, {'name': 'GT30', 'amount': 1}, {'name': 'GH149', 'amount': 1}, {'name': 'GH23', 'amount': 2}, {'name': 'GT0', 'amount': 1}, {'name': 'GT19', 'amount': 1}, {'name': 'GH10', 'amount': 2}, {'name': 'GT2', 'amount': 15}, {'name': 'GT4', 'amount': 7}]}]}]}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests, json\n",
+    "query = \"\"\"query getGenomeCazy {\n",
+    "\ttaxons (where: { name: \"Formosa\" }) {\n",
+    "    name\n",
+    "    rank\n",
+    "    taxid\n",
+    "    genomes {\n",
+    "      name\n",
+    "      cazys {name, amount}\n",
+    "    }\n",
+    "  }\n",
+    "}\"\"\"\n",
+    "\n",
+    "url = 'http://localhost:4000'\n",
+    "r = requests.post(url, json={'query': query})\n",
+    "\n",
+    "print (json.loads(r.text))"
    ]
   },
   {
